fixed broken layout for copy button

--- a/static/css/global.css
+++ b/static/css/global.css
@@ -3,3 +3,9 @@
 .custom-body{height: auto;
 box-shadow: inset 0 0 0rem rgba(0, 0, 0, .5);}
 /*add box-shadow here and rename class .height-auti*/
+
+.copy-span{
+    background-color: white;
+    border-top-right-radius: 2px;
+    border-bottom-right-radius: 2px;
+}
